# asyncify

./: README.md  pyproject.toml
asyncify/: __init__.py  __init__.pyi  types.py  utils.py
asyncify/core/: boosted_pool.py  decorator.py  executors.py  runners.py
benchmarks/: benchmark.py  demo.py  stress.py  test_boosted_pool.py
tests/: conftest.py  test_decorators.py  test_integration.py  test_run_async.py  test_run_sync.py  test_sync_iter.py
