[project]
name = "asyncify"
version = "0.1.0"
description = "Type-safe async/sync bridge with adaptive thread/process pools"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
monitoring = ["psutil>=5.9.0"]

[tool.basedpyright]
pythonVersion = "3.10"
include = ["asyncify"]
exclude = [
    "**/node_modules",
    "**/.venv",
    "**/site-packages",
    "**/__pycache__",
]
typeCheckingMode = "all"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I"] # E=Error, F=Pyflakes, W=Warning, I=isort
target-version = "py310"

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
dev = [
    "ruff",
    "pip-audit",
    "basedpyright"
]
